Replacing "reward" with "backward"

--- a/locales/en.json
+++ b/locales/en.json
@@ -3,7 +3,7 @@
 		"turnLeft"		: "turn left",
 		"moveFoward"	: "move foward",
 		"turnRight"		: "turn right",
-		"moveReward"	: "move reward",
+		"moveBackward"	: "move backward",
 		"noOperation"	: "no operation",
 	},
 	"removeLastCommand"	: "Remove",
