--- a/locales/en.json
+++ b/locales/en.json
@@ -7,6 +7,7 @@
 		"noOperation"	: "no operation",
 	},
 	"removeLastCommand"	: "Remove",
+	"uploadCommands"	: "⇒",
 	"executeCommands"	: "Execute !",
 	"youWin"			: "You win !!!",
 	"goNextLevel"		: "Go to next level !"
